--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,40 +21,41 @@
   %>
 <% end %>
 
+<% if @user.is_vote %>
 
-<div class="profile">
-  <div class="container content-container">
+  <div class="profile">
+    <div class="container content-container">
 
-    <div class="profile-heding">
-      <div>
-        АНКЕТА УЧАСТНИЦЫ № <%= @user.number %>
+      <div class="profile-heding">
+        <div>
+          АНКЕТА УЧАСТНИЦЫ № <%= @user.number %>
+        </div>
+        <div>
+          <b>
+            <%= @user_position %>
+          </b>
+          <b>
+            место
+          </b>
+          /
+          <b>
+            <%= @user.votes %>
+          </b>
+          <b>
+            голосов
+          </b>
+        </div>
       </div>
-      <div>
-        <b>
-          <%= @user_position %>
-        </b>
-        <b>
-          место
-        </b>
-        /
-        <b>
-          <%= @user.votes %>
-        </b>
-        <b>
-          голосов
-        </b>
-      </div>
-    </div>
 
-    <div class="profile-container">
-      <div class="profile-photos-col">
-        <%== render 'users/photos' %>
-      </div>
-      <div class="profile-info-col">
+      <div class="profile-container">
+        <div class="profile-photos-col">
+          <%== render 'users/photos' %>
+        </div>
+        <div class="profile-info-col">
 
-        <div class="votes-block">
+          <div class="votes-block">
 
-          <% if user_signed_in? && current_user != @user %>
+
             <div class="votes-block-pager">
               <%- if @user_prev %>
                 <%== link_to user_path(@user_prev), class: 'btn btn-default' do %>
@@ -82,33 +83,62 @@
                 <div></div>
               <% end %>
             </div>
-          <% end %>
 
 
-          <% if user_signed_in? && !policy(@user).profile? %>
-            <% if VotesQuery.new.is_votes(current_user, @user.number) %>
+            <% if user_signed_in? && !policy(@user).profile? %>
+              <% if VotesQuery.new.is_votes(current_user, @user.number) %>
+                <div class="vote-btn-container text-center">
+                  <%= link_to voteable_path(@user),
+                              class: 'vote-btn',
+                              remote: true do %>
+                    Проголосовать за участницу
+                    <%= image_tag asset_pack_path 'icon-like-red.svg' %>
+                  <% end %>
+                </div>
+              <% end %>
+            <% else %>
               <div class="vote-btn-container text-center">
-                <%= link_to voteable_path(@user),
-                            class: 'vote-btn',
-                            remote: true do %>
-                  Проголосовать за участницу
-                  <%= image_tag asset_pack_path 'icon-like-red.svg' %>
-                <% end %>
-              </div>
-            <% end %>
-          <% else %>
-            <div class="vote-btn-container text-center">
               <span type="button" class="vote-btn" data-toggle="modal" data-target="#myModal">
                 Проголосовать за участницу
                 <%= image_tag asset_pack_path 'icon-like-red.svg' %>
               </span>
+              </div>
+            <% end %>
+          </div>
+
+          <%== render 'users/userinfo' %>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+<% else %>
+  <% if user_signed_in? && policy(@user).edit? %>
+
+    <div class="profile">
+      <div class="container content-container" style="padding-top: 80px">
+
+        <div class="row">
+
+          <div class="col-md-6">
+            <div class="text-right">
+              <%= button_to is_voted_path(@user), class: 'btn btn-success btn-lg' do %>
+                Участвовать в конкурсе
+              <%- end %>
             </div>
-          <% end %>
+          </div>
+
+          <div class="col-md-6">
+            <div class="text-left">
+              <%= link_to 'Голосовать', votes_path, class: 'btn btn-primary btn-lg' %>
+            </div>
+          </div>
+
         </div>
 
-        <%== render 'users/userinfo' %>
       </div>
     </div>
 
-  </div>
-</div>
+  <% end %>
+<% end %>
