--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -205,3 +205,14 @@ header {
 		}
 	}
 }
+
+.btn-header{
+	background: none;
+	border: none;
+	padding-top: 34px;
+	padding-bottom: 34px;
+	color: #fff;
+	font-size: 17px;
+	font-weight: 100;
+	text-transform: uppercase;
+}
