--- a/app/views/users/_userinfo.erb
+++ b/app/views/users/_userinfo.erb
@@ -92,7 +92,7 @@
         Обо мне
       </div>
       <div class="profile-info-item-body">
-        <%= @user.about %>
+        <%= simple_format @user.about %>
       </div>
     </div>
   </div>
