--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -126,8 +126,8 @@
         <b>Финал конкурса:</b>
         <br>
         голосование жюри
-        Rixos Sungate
-        Белек, Турция
+        Rixos Sungate,
+        Бельдиби, Турция
       </div>
     </div>
   </div>
