добавил код адсенсе

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
   <%== stylesheet_pack_tag 'app-styles' %>
   <%== javascript_include_tag 'application' %>
   <%== javascript_pack_tag 'application' %>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-9255090171390946",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 <body>
 <%== render 'header/header' %>
