--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -229,5 +229,19 @@
       </div>
     </div>
 
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('danilovich.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Евгений Данилович
+      </div>
+      <div class="jury-item-info">
+        Генеральний директор
+        <br>
+        УК Sletat.ru
+      </div>
+    </div>
+
   </div>
 </div>
