--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -298,10 +298,14 @@
 	margin: 0 0 30px;
 	text-align: center;
 	vertical-align: top;
+
+	img{
+		border-radius: 50%;
+	}
 }
 
 .jury-item-name {
-	font-size: 18px;
+	font-size: 17px;
 	font-weight: bold;
 	line-height: 1.33;
 	text-align: center;
