--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
 <!-- /Yandex.Metrika counter -->
 
 
-<%== render 'shared/socials' %>
+<%#== render 'shared/socials' %>
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 </body>
