--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -18,22 +18,27 @@ header {
 		background-color: rgba(0, 0, 0, .2);
 	}
 
-	@media (max-width: 1024px){
+	@media (max-width: 1024px) {
 		height: 540px;
 	}
-	@media (max-width: 768px){
+	@media (max-width: 992px) {
+		.container {
+			width: 100%;
+		}
+	}
+	@media (max-width: 768px) {
 		height: 440px;
 	}
 }
 
-.header-collapse{
-	height: 92px;
+.header-collapse {
+	height: 76px;
 }
 
 .navbar {
 	z-index: 4;
 
-	@media (max-width: 768px){
+	@media (max-width: 768px) {
 		min-height: 64px;
 	}
 }
@@ -41,19 +46,25 @@ header {
 .navbar-brand {
 	padding: 12px 15px;
 
-	@media (max-width: 768px){
+	img {
+		height: 50px;
+		vertical-align: top;
+	}
+
+	@media (max-width: 768px) {
 		height: 64px;
-		img{
+		img {
 			height: 40px;
 			vertical-align: top;
 		}
 	}
 }
-.navbar-collapse{
-	@media (max-width: 767px){
+
+.navbar-collapse {
+	@media (max-width: 1024px) {
 		position: absolute;
 		left: 0;
-		top: 64px;
+		top: 74px;
 		right: 0;
 		z-index: 3000;
 		padding-left: 30px;
@@ -62,24 +73,25 @@ header {
 	}
 }
 
-.navbar-toggle{
-	@media (max-width: 768px){
+.navbar-toggle {
+	@media (max-width: 768px) {
 		margin-top: 12px;
 		margin-bottom: 12px;
 	}
 }
+
 .navbar-inverse .navbar-nav {
 	& > li {
 		& > a {
-			font-size: 17px;
+			font-size: 15px;
 			font-weight: 100;
 			text-transform: uppercase;
 
 			&.user-avatar {
 				display: block;
-				height: 90px;
-				padding-top: 29px;
-				padding-bottom: 29px;
+				height: 74px;
+				padding-top: 21px;
+				padding-bottom: 21px;
 				padding-right: 0;
 
 				.img-responsive {
@@ -103,31 +115,31 @@ header {
 	color: #ffffff;
 	text-shadow: 0 4px 7px rgba(0, 0, 0, 0.27);
 
-	@media (max-width: 1280px){
+	@media (max-width: 1280px) {
 		font-size: 66px;
 	}
-	@media (max-width: 1024px){
+	@media (max-width: 1024px) {
 		margin: 100px 0 60px;
 		font-size: 56px;
 	}
-	@media (max-width: 768px){
+	@media (max-width: 768px) {
 		margin: 80px 0 50px;
 		font-size: 36px;
 	}
-	@media (max-width: 480px){
+	@media (max-width: 480px) {
 		margin: 60px 0 40px;
 		font-size: 30px;
 	}
 }
 
-.header-buttons{
+.header-buttons {
 	position: relative;
 	z-index: 3;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 
-	.btn{
+	.btn {
 		margin: 0 16px;
 	}
 }
@@ -145,7 +157,7 @@ header {
 	color: #ffffff;
 	text-shadow: 0 6px 7px rgba(0, 0, 0, 0.27);
 
-	@media (max-width: 768px){
+	@media (max-width: 768px) {
 		font-size: 20px;
 	}
 }
@@ -156,7 +168,7 @@ header {
 	justify-content: center;
 	padding: 50px 0;
 
-	@media (max-width: 768px){
+	@media (max-width: 768px) {
 		padding: 30px 0 0;
 	}
 }
@@ -174,39 +186,40 @@ header {
 	color: #ffffff;
 	text-align: center;
 
-	img{
+	img {
 		vertical-align: top;
 	}
 
-	@media (max-width: 768px){
+	@media (max-width: 768px) {
 		height: 42px;
 		padding: 10px 0;
 		font-size: 16px;
 
-		img{
+		img {
 			height: 18px;
 		}
 	}
 }
+
 .b-sign-in-button-vk {
 	background-color: #4f719b;
 
-	.fa{
+	.fa {
 		margin: 3px 10px 0 0;
 		vertical-align: top;
 		font-size: 25px;
 	}
-	span{
+	span {
 		display: inline-block;
 		padding-top: 3px;
 
-		@media (max-width: 768px){
+		@media (max-width: 768px) {
 			padding-top: 1px;
 		}
 	}
 }
 
-.btn-header{
+.btn-header {
 	background: none;
 	border: none;
 	padding-top: 34px;
