--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -15,7 +15,7 @@
 <div class="container content-container">
 
   <div class="home_top">
-    ПОПУЛЯРНЫЕ УЧАСТНИЦЫ
+    ТОП-12 Участниц
   </div>
 
   <div class="owl-carousel home-users">
