--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -316,6 +316,7 @@
 .vote-btn {
 	display: block;
 	height: 64px;
+	max-width: 538px;
 	padding: 16px 0;
 	border-radius: 4px;
 	background-image: linear-gradient(to bottom, #ffe800, #ffcc00);
