--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
              meta_title %>
   </title>
   <meta name="description" content="<%== content_for?(:description) ?
-                                            yield(:description) :
+                                             yield(:description) :
                                              meta_desc %>" />
 
   <%= yield :og %>
@@ -21,56 +21,64 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-9255090171390946",
-      enable_page_level_ads: true
+      google_ad_client: 'ca-pub-9255090171390946',
+      enable_page_level_ads: true,
     });
   </script>
 </head>
 <body>
-<%== render 'header/header' %>
-<%== render 'layouts/messages' %>
+<%= render 'header/header' %>
+<%= render 'layouts/messages' %>
 
-<%== yield %>
-<%== render 'shared/organizator' %>
-<%== render 'layouts/footer' %>
+<%= yield %>
+<%= render partial: 'shared/organizator', cached: true %>
+<%= render partial: 'layouts/footer', cached: true %>
 
 <!— Global Site Tag (gtag.js) - Google Analytics —>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39953962-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments)};
+
+  function gtag() {dataLayer.push(arguments);};
   gtag('js', new Date());
 
   gtag('config', 'UA-39953962-1');
 </script>
 <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function (d, w, c) {
+<script type="text/javascript">
+  (function(d, w, c) {
     (w[c] = w[c] || []).push(function() {
       try {
         w.yaCounter45973884 = new Ya.Metrika({
-          id:45973884,
-          clickmap:true,
-          trackLinks:true,
-          accurateTrackBounce:true,
-          webvisor:true
+          id: 45973884,
+          clickmap: true,
+          trackLinks: true,
+          accurateTrackBounce: true,
+          webvisor: true,
         });
-      } catch(e) { }
+      } catch (e) {
+      }
     });
 
-    var n = d.getElementsByTagName("script")[0],
-        s = d.createElement("script"),
-        f = function () { n.parentNode.insertBefore(s, n); };
-    s.type = "text/javascript";
+    var n = d.getElementsByTagName('script')[0],
+        s = d.createElement('script'),
+        f = function() { n.parentNode.insertBefore(s, n); };
+    s.type = 'text/javascript';
     s.async = true;
-    s.src = "https://mc.yandex.ru/metrika/watch.js";
+    s.src = 'https://mc.yandex.ru/metrika/watch.js';
 
-    if (w.opera == "[object Opera]") {
-      d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
-  })(document, window, "yandex_metrika_callbacks");
+    if (w.opera == '[object Opera]') {
+      d.addEventListener('DOMContentLoaded', f, false);
+    } else {
+      f();
+    }
+  })(document, window, 'yandex_metrika_callbacks');
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/45973884" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript>
+  <div>
+    <img src="https://mc.yandex.ru/watch/45973884" style="position:absolute; left:-9999px;" alt="" />
+  </div>
+</noscript>
 <!-- /Yandex.Metrika counter -->
 
 
