--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,9 @@
 
       <div class="profile-container">
         <div class="profile-photos-col">
-          <%== render 'users/photos' %>
+          <% cache @user do %>
+            <%== render 'users/photos' %>
+          <% end %>
         </div>
         <div class="profile-info-col">
 
