--- a/app/views/users/_votes.erb
+++ b/app/views/users/_votes.erb
@@ -2,6 +2,29 @@
   Голосуй за Мисс Туризм!
 </h1>
 
+<div class="search-block">
+  <!-- Single button -->
+  <div class="row">
+    <div class="col-lg-9">
+    </div>
+
+    <div class="col-lg-3 text-right">
+      <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Сортировать <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 <div class="votes-users">
   <%- @users.each do |user| %>
