--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,7 +60,7 @@
 
             <div class="votes-block-pager">
               <%- if @user_prev %>
-                <%== link_to user_path(@user_prev), class: 'btn btn-default' do %>
+                <%== link_to user_path(@user_prev, request.query_parameters), class: 'btn btn-default' do %>
                   <i class="fa fa-chevron-left" aria-hidden="true"></i>
                   <span>Предыдущая</span>
                 <% end %>
@@ -77,7 +77,7 @@
               <% end %>
 
               <%- if @user_next %>
-                <%== link_to user_path(@user_next), class: 'btn btn-default' do %>
+                <%== link_to user_path(@user_next, request.query_parameters), class: 'btn btn-default' do %>
                   <span>Следующая</span>
                   <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 <% end %>
