сортировка по голосам и по дате

--- a/app/javascript/packs/_votes.scss
+++ b/app/javascript/packs/_votes.scss
@@ -66,7 +66,14 @@
 }
 
 .anketa-item-organization {
+	margin: 0 0 8px;
 	font-size: 16px;
+	text-align: center;
+	color: #5d5d5d !important;
+}
+
+.anketa-item-date{
+	font-size: 12px;
 	text-align: center;
 	color: #5d5d5d !important;
 }
