--- a/app/views/users/_votes.erb
+++ b/app/views/users/_votes.erb
@@ -25,7 +25,7 @@
     <%- unless params[:create_date] %>
       <a href='?create_date=1'>
         По дате подачи анкеты
-        <i class="fa fa-sort-amount-asc" aria-hidden="true"></i>
+        <i class="fa fa-sort-amount-desc" aria-hidden="true"></i>
       </a>
     <% end %>
   </div>
