--- a/app/views/shared/_anketa_mini.erb
+++ b/app/views/shared/_anketa_mini.erb
@@ -28,8 +28,10 @@
   <div class="anketa-item-organization">
     <%= user.organization %>
   </div>
+  <!--
   <div class="anketa-item-date">
     <span class="text-muted">Дата размещения анкеты:</span>
-    <%= user.created_at.present? && user.created_at.strftime("%d.%m.%Y") %>
+    <%#= user.created_at.present? && user.created_at.strftime("%d.%m.%Y") %>
   </div>
+  -->
 <% end %>
