ghjcvjnh lfyys[ gjkmpjdfntkz

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <td>
-  <%= link_to user.name, user %>
+  <%= link_to user.name, show_member_path(user) %>
   <br>
   <%= link_to user.email, user %>
   <br>
