починил кнопку голосования

--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -329,6 +329,7 @@
 	color: #000000 !important;
 	text-decoration: none !important;
 	text-transform: uppercase;
+	cursor: pointer;
 
 	@media (max-width: 662px) {
 		height: auto;
