--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -101,10 +101,10 @@
             <% else %>
               <% if !policy(@user).profile? %>
                 <div class="vote-btn-container text-center">
-              <span type="button" class="vote-btn" data-toggle="modal" data-target="#myModal">
+              <a href="#" class="vote-btn" data-toggle="modal" data-target="#myModal">
                 Проголосовать за участницу
                 <%= image_tag asset_pack_path 'icon-like-red.svg' %>
-              </span>
+              </a>
                 </div>
               <% end %>
             <% end %>
