добавил партнеров и обновил баннер

--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -283,6 +283,11 @@
 	@media (max-width: 1024px){
 		margin: 60px 0 80px;
 	}
+	@media (max-width: 400px){
+		.hide-xs{
+			display: none;
+		}
+	}
 }
 
 .jury-list {
