--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -136,7 +136,8 @@
   <%- unless user_signed_in? %>
     <div class="home-action">
       <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal">
-        Принять участие в конкурсе
+        Принять участие
+        <span class="hide-xs">в конкурсе</span>
       </button>
     </div>
   <% end %>
