--- a/app/views/users/voteable.js.erb
+++ b/app/views/users/voteable.js.erb
@@ -1,1 +1,2 @@
 $(".vote-btn-container").html("<%= escape_javascript(render 'users/votes_btn') %>");
+$(".profile-position").html("<%= escape_javascript(render 'users/anketa_count') %>");
