--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -1,3 +1,26 @@
+<div class="container general-partner-container">
+  <!-- Yandex.RTB R-A-248526-1 -->
+  <div id="yandex_rtb_R-A-248526-1"></div>
+  <script type="text/javascript">
+    (function(w, d, n, s, t) {
+      w[n] = w[n] || [];
+      w[n].push(function() {
+        Ya.Context.AdvManager.render({
+          blockId: 'R-A-248526-1',
+          renderTo: 'yandex_rtb_R-A-248526-1',
+          async: true,
+        });
+      });
+      t = d.getElementsByTagName('script')[0];
+      s = d.createElement('script');
+      s.type = 'text/javascript';
+      s.src = '//an.yandex.ru/system/context.js';
+      s.async = true;
+      t.parentNode.insertBefore(s, t);
+    })(this, this.document, 'yandexContextAsyncCallbacks');
+  </script>
+</div>
+
 <%- if request.fullpath === "/" %>
   <a href="http://sungate-ru.rixos.com/" class="general-partner" id="partners" target="_blank">
     <h2 class="general-partner-title">Генеральный партнер</h2>
