дбавил рекламный блок

--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -20,7 +20,7 @@
 body {
 	position: relative;
 	min-height: 100vh;
-	padding: 0 0 90px;
+	padding: 0;
 	background-image: url('img/fon@2x.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
