--- a/app/javascript/packs/_footer.scss
+++ b/app/javascript/packs/_footer.scss
@@ -1,15 +1,53 @@
 .footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 90px;
-	padding: 36px 0;
-	background-color: #000000;
+	padding: 30px 0;
+	background: url('img/futter.jpg');
+	background-position: center;
+	background-size: cover;
 }
+
+.container-footer {
+	display: flex;
+	justify-content: space-between;
+
+
+	@media (max-width: 1024px) {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+}
+
 .copyright {
-	font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;
 	font-size: 14px;
+	line-height: 17px;
 	text-align: right;
-	color: #ffffff;
+	color: #b6b6b6;
+
+
+	a {
+		display: inline-block;
+		height: 28px;
+		margin-left: 16px;
+		padding: 5px 16px;
+		border-radius: 3px;
+		border: solid 1px #70b1ff;
+		color: #70b1ff;
+	}
+}
+
+.pravo {
+	display: flex;
+	align-items: center;
+	font-size: 12px;
+	text-align: right;
+	color: #b6b6b6;
+
+	@media (max-width: 1024px) {
+		margin-bottom: 20px;
+	}
+}
+
+.pravo-label {
+	display: inline-block;
+	max-width: 70px;
+	margin-right: 12px;
 }
