--- a/app/javascript/packs/_organizator.scss
+++ b/app/javascript/packs/_organizator.scss
@@ -73,38 +73,9 @@
 }
 
 .partners-container {
-	padding: 32px 0;
-	background-color: #fafafa;
-}
-
-.partners-container-flex {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-
-	@media (max-width: 1200px) {
-		justify-content: center;
-	}
-}
-
-.partners {
-	padding-bottom: 63px;
-	margin: 0 30px;
-
-	&:last-child {
-		margin-right: 0;
-	}
-
-	&:first-child {
-		margin-left: 0;
-	}
-
-	@media (max-width: 1200px) {
-		padding-bottom: 30px;
-	}
-	@media (max-width: 1024px) {
-		margin: 0;
-	}
+	padding-top: 40px;
+	padding-bottom: 50px;
+	background-color: #fff;
 }
 
 .partners-title {
@@ -124,21 +95,9 @@
 	flex-wrap: wrap;
 }
 
-.partners-links-2 {
-	//justify-content: space-between;
-	.partners-link {
-		margin: 0 15px 24px;
-	}
-}
-
-.partners-links-2-border {
-	padding-bottom: 10px;
-	border-bottom: solid 1px #979797;
-}
-
 .partners-link {
 	display: inline-block;
-	margin: 0 15px;
+	margin: 0 20px 32px;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 1.33;
@@ -153,32 +112,13 @@
 	}
 }
 
-.partner-bronevik {
-	font-size: 26px;
-	font-weight: bold;
-	line-height: 0.92;
-	text-align: center;
-	color: #000000;
-}
 
-.partners_1 {
-	margin: 0;
-	padding: 100px 0 50px !important;
-	background-color: #fff;
-	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
 
-	@media (max-width: 992px) {
-		padding: 60px 0 30px;
-	}
-}
+.partners-block{
+	padding: 60px 0 18px;
+	border-bottom: solid 2px #d6d6d6;
 
-.partners-link-1 {
-	margin: 0 50px 50px;
-
-	@media (max-width: 992px) {
-		margin: 0 50px 30px !important;
-	}
-	@media (max-width: 768px) {
-		margin: 0 0px 30px !important;
+	&:last-child{
+		border-bottom: none;
 	}
 }
