--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,19 @@
 <div class="footer">
   <div class="container">
-    <div class="copyright">
-      По вопросам участия в конкурсе и партнерства пишите на
-      <a href="mailto:privet@missturizm.ru">privet@missturizm.ru</a>
+    <div class="container-footer">
+
+      <div class="pravo">
+          <span class="pravo-label">
+            Правовая поддержка
+          </span>
+        <%= image_tag asset_pack_path 'logo-bayborodina.svg' %>
+      </div>
+
+      <div class="copyright">
+        По вопросам участия в конкурсе и партнерства пишите на
+        <a href="mailto:privet@missturizm.ru">privet@missturizm.ru</a>
+      </div>
+
     </div>
   </div>
 </div>
